--- a/EX2-repsonsive-wannabe-starter/css/style.css
+++ b/EX2-repsonsive-wannabe-starter/css/style.css
@@ -127,3 +127,30 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+@media screen and (max-width: 768px) {
+
+    .container {
+        width: 100%; 
+        margin: 0 auto;
+    }
+
+    .site-header {
+        width: 100%; 
+    }
+
+} 
+
+@media screen and (max-width: 480px) {
+
+    .container, .site-header, .row, .col, .col-left, .col-right {
+        width: 100%; 
+        margin: 0 auto;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+}
